Fixed overworld rules being blank